--- a/page1.html
+++ b/page1.html
@@ -52,24 +52,19 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="index.html">
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
+                    <a class="nav-link link text-white text-primary display-4" href="index.html#top">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
                         Services
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="#top">
+                    <a class="nav-link link text-white text-primary display-4" href="page1.html#top">
                         <span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         About Us
                     </a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn">
-                <a class="btn btn-sm btn-primary display-4" href="https://mobirise.com">
-                    <span class="mbri-save mbr-iconfont mbr-iconfont-btn "></span>
-                    Try It Now!
-                </a>
-            </div>
+            
         </div>
     </nav>
 </section>
@@ -100,7 +95,7 @@
                 </div>
 
                 <form class="form-inline" action="https://mobirise.eu/" method="post" data-form-title="Mobirise Form">
-                    <input type="hidden" value="eRTT5lL+KS7j+IxpWlx6i//y8ORiAkQ9LmidI/5Sx6xkfhIDrjpSJiAZeFlljllAndSexQqhwToSU6Xwt6XE3cvXqV9BMJOxq1lUsDuPBnIW7+Q1lJ/7Zdvy3K9DIMgg" data-form-email="true">
+                    <input type="hidden" value="4hZrelVOcL0kdin6Qt7kI4CtziFc+ly0NaK1zD3EoUeVberI3DcxI0KKeoNFzyRHf7bAumBGt8apewQzeudo2HJlz9cCJYqK8+DkHUTZRwi38CZf3fAnSifEPathoT69" data-form-email="true">
                     <div class="form-group">
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" placeholder="Name" id="name-header13-3">
                     </div>
@@ -237,7 +232,7 @@
                         Thanks for filling out the form!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.eu/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="PCs3IxPAFLkKi8PGnDvGKsmo4PEe+CM0sZxFoYB54k511U6OTu9mCBRj+riLh9+Q/ldybeb1OrD71lNeW0p4+r71WjTHlvpxwL0dgWnmhMED/u3Ec/XRfTf2YKi1DI7R">
+                    <form class="mbr-form" action="https://mobirise.eu/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="d0iluTq7pHfwXXHC3gnvJZ7DbbsXEs2WNuSz+I7DKd6r47td/HNPBNf2+7/jbqusW9BGkGrdMPio1ngkpE5OQAL7DQf6K0GkKWVycikqW86b8Wc1XLmudrqng/9VcXLK">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -420,7 +415,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/n" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/c" style="color:#aaa;">The</a> website was made with Mobirise</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/playervimeo/vimeo_player.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>  <script src="assets/mbr-clients-slider/mbr-clients-slider.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/a" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Set up a website with <a href="https://mobirise.site/z" style="color:#aaa;">Mobirise</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/playervimeo/vimeo_player.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>  <script src="assets/mbr-clients-slider/mbr-clients-slider.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
 </body>
