--- a/page1.html
+++ b/page1.html
@@ -53,13 +53,13 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white text-primary display-4" href="index.html#top">
+                    <a class="nav-link link text-white text-primary display-4" href="https://sarvshresth.github.io/index.html">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
                         Services
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-white text-primary display-4" href="page1.html#top">
+                    <a class="nav-link link text-white text-primary display-4" href="https://sarvshresth.github.io/page1.html">
                         <span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         About Us
                     </a>
@@ -95,7 +95,7 @@
                 </div>
 
                 <form class="form-inline" action="https://mobirise.eu/" method="post" data-form-title="Mobirise Form">
-                    <input type="hidden" value="4hZrelVOcL0kdin6Qt7kI4CtziFc+ly0NaK1zD3EoUeVberI3DcxI0KKeoNFzyRHf7bAumBGt8apewQzeudo2HJlz9cCJYqK8+DkHUTZRwi38CZf3fAnSifEPathoT69" data-form-email="true">
+                    <input type="hidden" value="Hj2L8fnfTQ6AdwratzP08FOF/mBSlzCQHiRJpCcvuFa8Y3n3KLzveERVnHnxgHavce5veE98Z2S1yTWH3HFjL7/eOHhfp88ZiROnQwfBjb4EoFqJo9s00gz3ttvudVsq" data-form-email="true">
                     <div class="form-group">
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" placeholder="Name" id="name-header13-3">
                     </div>
@@ -232,7 +232,7 @@
                         Thanks for filling out the form!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.eu/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="d0iluTq7pHfwXXHC3gnvJZ7DbbsXEs2WNuSz+I7DKd6r47td/HNPBNf2+7/jbqusW9BGkGrdMPio1ngkpE5OQAL7DQf6K0GkKWVycikqW86b8Wc1XLmudrqng/9VcXLK">
+                    <form class="mbr-form" action="https://mobirise.eu/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="4ef+dFwbZzd7EUs7SLUEqWFawr0f0ZYOSt/3QYdtPPFLTYNsIBs428lcc24us2pldPhp3gfz2aQbeMRbZbbvejA0Xm9LfTrpHI3FAwpBKmorTZvMr52fRiZZcGYO0F7t">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -415,7 +415,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/a" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Set up a website with <a href="https://mobirise.site/z" style="color:#aaa;">Mobirise</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/playervimeo/vimeo_player.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>  <script src="assets/mbr-clients-slider/mbr-clients-slider.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/q" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Designed with Mobirise - <a href="https://mobirise.site/k" style="color:#aaa;">Learn more</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/playervimeo/vimeo_player.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>  <script src="assets/mbr-clients-slider/mbr-clients-slider.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
 </body>
